--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material/web": "^1.0.0-pre.14",
+    "bootstrap": "^5.3.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
